<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FlowStream for Android</string>
    <string name="plz_auth">このアプリケーションを利用するにはTwitterとの認証が必要です。下の認証ボタンを押してください。</string>
    <string name="doauth">認証を実行</string>
    <string name="compauth">アカウントの認証が完了しました！下のボタンから利用を開始できます！</string>
    <string name="start">Start</string>
    <string name="authnumber">暗証番号</string>
    <string name="authstep2">次に、TwitterのWebページに表示された暗証番号を入力してください。</string>
    <string name="getat">送信</string>
    <string name="savedat">認証情報を保存しました。</string>
    <string name="needConfig">Daydream機能を利用するには、まず本体アプリケーションでの設定が必要です。FlowStreamを起動して設定をしてください。</string>
    <string name="needConfigTitle">アカウント設定が必要です</string>
    <string name="theme">テーマ</string>
    <string name="pref_theme">テーマを選択してください</string>
    <string name="pref_theme_summary">カラーテーマを選択</string>
    <string name="text_size">テキストサイズ</string>
    <string name="sn_size">スクリーンネームサイズ</string>
    <string name="plz_size_px">サイズをpxで指定してください。</string>
    <string name="useFilterTimelineTitle">ハッシュタグモードにする</string>
    <string name="filterTimelineQueryTitle">ハッシュタグ入力</string>
    <string name="openSettings">設定を開く</string>
    <string name="openReAuth">再認証する</string>
    <string name="aboutApp">このアプリケーションについて</string>
    <string name="copyRight">Copyright 2013 haru2036</string>
    <string name="licenseTwitter4J">このソフトウェアには、 Apache 2.0ライセンスで配布されている著作物が含まれています。</string>
    <string name="needReboot">設定の適用には再起動が必要です。</string>
    <string name="queryIsNull">ハッシュタグモードに入ろうとしましたが、ハッシュタグの設定を読み込めなかったので通常モードで動作します。</string>

</resources>
